# color_detector

./: CMakeLists.txt  test.cpp
files/: chess_generater.py
include/: ColorDetector.cpp  ColorDetector.h
src/: FindColor.cpp  FindH.cpp  test.cpp
